fix(grid): broken layout in RTL mode
closes telerik/kendo-angular#689

--- a/scss/grid/_theme.scss
+++ b/scss/grid/_theme.scss
@@ -162,4 +162,11 @@
         }
     }
 
+    // Grid content
+    .k-grid-content,
+    .k-grid-header-wrap {
+        > table {
+            min-width: 100%;
+        }
+    }
 }
